[gd_scene load_steps=2 format=3 uid="uid://cyx2j5k8h3qro"]

[ext_resource type="Script" path="res://scripts/ui/boost-timer.gd" id="1_boost_timer"]

[node name="BoostTimer" type="Control"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -120.0
offset_right = 300.0
offset_bottom = -20.0
script = ExtResource("1_boost_timer")

[node name="BoostPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
modulate = Color(1, 1, 1, 0.8)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="BoostLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "BOOST ACTIVE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimerLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "10:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer"]
layout_mode = 2
max_value = 100.0
value = 100.0
show_percentage = false